--- a/src/index.html
+++ b/src/index.html
@@ -2,25 +2,40 @@
 <html lang="en">
 
 <head>
-  <meta charset="utf-8" />
+  <meta charset="utf-8"/>
   <title>Ionic App</title>
 
-  <base href="/" />
+  <base href="/"/>
 
-  <meta name="color-scheme" content="light dark" />
-  <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-  <meta name="format-detection" content="telephone=no" />
-  <meta name="msapplication-tap-highlight" content="no" />
+  <meta name="color-scheme" content="light dark"/>
+  <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
+  <meta name="format-detection" content="telephone=no"/>
+  <meta name="msapplication-tap-highlight" content="no"/>
 
-  <link rel="icon" type="image/png" href="assets/icon/favicon.png" />
+  <link rel="icon" type="image/png" href="assets/icon/favicon.png"/>
 
   <!-- add to homescreen for ios -->
-  <meta name="apple-mobile-web-app-capable" content="yes" />
-  <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+  <meta name="apple-mobile-web-app-capable" content="yes"/>
+  <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
+  <link rel="manifest" href="manifest.webmanifest">
+  <meta name="apple-mobile-web-app-title" content="Barcode Scanner">
+  <link rel="apple-touch-icon" href="/assets/icons/apple-icon-57x57.png" sizes="57x57">
+  <link rel="apple-touch-icon" href="/assets/icons/apple-icon-60x60.png" sizes="60x60">
+  <link rel="apple-touch-icon" href="/assets/icons/apple-icon-72x72.png" sizes="72x72">
+  <link rel="apple-touch-icon" href="/assets/icons/apple-icon-76x76.png" sizes="76x76">
+  <link rel="apple-touch-icon" href="/assets/icons/apple-icon-114x114.png" sizes="114x114">
+  <link rel="apple-touch-icon" href="/assets/icons/apple-icon-120x120.png" sizes="120x120">
+  <link rel="apple-touch-icon" href="/assets/icons/apple-icon-144x144.png" sizes="144x144">
+  <link rel="apple-touch-icon" href="/assets/icons/apple-icon-152x152.png" sizes="152x152">
+  <link rel="apple-touch-icon" href="/assets/icons/apple-icon-180x180.png" sizes="180x180">
+  <meta name="msapplication-TileImage" content="/assets/icons/app-icon-144x144.png">
+  <meta name="msapplication-TileColor" content="#fff">
+  <meta name="theme-color" content="">
 </head>
 
 <body>
   <app-root></app-root>
+  <noscript>Please enable JavaScript to continue using this application.</noscript>
 </body>
 
 </html>
